@@ -19,11 +19,12 @@ if( $] < 5.005 ) {
   ExtUtils::MakeMaker::WriteEmptyMakefile();
 } else {
 
-wxWriteMakefile( NAME          => 'Wx::Perl::SplashFast',
-                 ABSTRACT_FROM => 'SplashFast.pm',
-                 AUTHOR        => 'Graciliano M. P. <gm@virtuasites.com.br>',
-                 VERSION_FROM  => 'SplashFast.pm',
-                 REQUIRE_WX    => 2.003_001,
+wxWriteMakefile( NAME            => 'Wx::Perl::SplashFast',
+                 ABSTRACT_FROM   => 'SplashFast.pm',
+                 AUTHOR          => 'Graciliano M. P. <gm@virtuasites.com.br>',
+                 VERSION_FROM    => 'SplashFast.pm',
+                 REQUIRE_WX      => 2.003_001,
+                 NO_WX_PLATFORMS => [ 'mac' ],
                 );
 
 }
