@@ -6,6 +6,7 @@ Revision history for Perl extension Wx.
 	- Added Wx::Wave
 	- Added Wx::MemoryFSHandler
 	- Added Wx::Perl::Carp (thanks to podmaster).
+	- Mac OS X support (requires wxWindows 2.4.0 or newer).
 
 0.12  Mon Dec 02 17:50:43 2002
 	- new DEPRECATIONS section in README.txt, please read it
